@@ -3,3 +3,4 @@ MANIFEST
 test.xml
 build
 .testrepository
+__pycache__
